# Spinter

./: .gitignore  CMakeLists.txt  README.org  TODO.org  br.sh  compile_commands.json  configure.sh  env.sh  glad.c  mainifest.scm  makefile  manifest.scm  project.sh  run.sh  spinter.sh  start.sh
.ccls-cache/@@home@haider@Code@Spinter/: @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@atomic_word.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@c++allocator.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@c++config.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@c++locale.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@cpu_defines.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@ctype_base.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@ctype_inline.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@error_constants.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@gthr-default.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@gthr.h.blob  @gnu@store@069aq2v993kpc41yabp5b6vm4wb9jkhg-gcc-10.3.0@include@c++@x86_64-unknown-linux-gnu@bits@os_defines.h.blob  @gnu@store@5h2w4qi9hk1qzzgi1w83220ydslinr4s-glibc-2.33@include@alloca.h.blob  @gnu@store@5h2w4qi9hk1qzzgi1w83220ydslinr4s-glibc-2.33@include@bits@byteswap.h.blob  @gnu@store@5h2w4qi9hk1qzzgi1w83220ydslinr4s-glibc-2.33@include@bits@cpu-set.h.blob  @gnu@store@5h2w4qi9hk1qzzgi1w83220ydslinr4s-glibc-2.33@include@bits@endian.h.blob  (+183 more)
lib/: CMakeLists.txt
src/: main.cpp
(+203 files in other folders)
